deleted:    img/Gemini_Generated_Image_ylcqfjylcqfjylcq.png 	deleted:    img/h1.png 	deleted:    img/li.png 	deleted:    img/logo.jpg 	deleted:    img/p.png 	new file:   img/tipoAcero.png 	new file:   img/tipoAgua.png 	new file:   img/tipoBicho.png 	new file:   img/tipoDragon.png 	new file:   img/tipoElectrico.png 	new file:   img/tipoFantasma.png 	new file:   img/tipoFuego.png 	new file:   img/tipoHada.png 	new file:   img/tipoHielo.png 	new file:   img/tipoLucha.png 	new file:   img/tipoNormal.png 	new file:   img/tipoPlanta.png 	new file:   img/tipoPsiquico.png 	new file:   img/tipoRoca.png 	new file:   img/tipoSiniestro.png 	new file:   img/tipoTierra.png 	new file:   img/tipoVeneno.png 	new file:   img/tipoVolador.png 	modified:   static/app.js 	modified:   static/ladingPrincipal.css 	deleted:    static/roca.css 	deleted:    static/roca.js 	deleted:    static/style.css 	deleted:    templates/2.HTML 	new file:   templates/TIPOS DE POKEMON/acero.html 	new file:   templates/TIPOS DE POKEMON/agua.html 	new file:   templates/TIPOS DE POKEMON/bicho.html 	new file:   templates/TIPOS DE POKEMON/dragon.html 	new file:   templates/TIPOS DE POKEMON/electrico.html 	modified:   templates/TIPOS DE POKEMON/fantasma.html 	new file:   templates/TIPOS DE POKEMON/fuego.html 	new file:   templates/TIPOS DE POKEMON/hada.html 	new file:   templates/TIPOS DE POKEMON/hielo.html 	new file:   templates/TIPOS DE POKEMON/lucha.html 	new file:   templates/TIPOS DE POKEMON/normal.html 	new file:   templates/TIPOS DE POKEMON/planta.html 	new file:   templates/TIPOS DE POKEMON/psiquico.html 	modified:   templates/TIPOS DE POKEMON/roca.html 	new file:   templates/TIPOS DE POKEMON/siniestro.html 	new file:   templates/TIPOS DE POKEMON/tierra.html 	new file:   templates/TIPOS DE POKEMON/veneno.html 	new file:   templates/TIPOS DE POKEMON/volador.html 	renamed:    templates/index.html -> templates/antiguo.html 	modified:   templates/ladingPrincipal.html

--- a/static/ladingPrincipal.css
+++ b/static/ladingPrincipal.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-image: url("/img/Gemini_Generated_Image_ylcqfjylcqfjylcq.png");
+    background-image: url("/img/body.png");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -68,8 +68,10 @@ body {
     padding: 20px 40px;
     border-radius: 50px;
     position: relative;
-    display: inline-block;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+
+    display: flex;
+    justify-content: center;
 }
 
 .nube-p {
@@ -87,8 +89,259 @@ body {
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
 }
 
-.nube-li {
-    background-image: url("/img/Gemini_Generated_Image_lpju1jlpju1jlpju.png");
+.link {
+    background-size: cover;
+    background-position: center;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    background-blend-mode: overlay;
+    padding: 20px 40px;
+    border-radius: 50px;
+    position: relative;
+    display: inline-block;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+.tipo-acero {
+  background-image: url(/img/tipoAcero.png);
+    background-size: cover;
+    background-position: center;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    background-blend-mode: overlay;
+    padding: 20px 40px;
+    border-radius: 50px;
+    position: relative;
+    display: inline-block;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+.tipo-agua {
+    background-image: url(/img/tipoAgua.png);
+    background-size: cover;
+    background-position: center;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    background-blend-mode: overlay;
+    padding: 20px 40px;
+    border-radius: 50px;
+    position: relative;
+    display: inline-block;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+.tipo-bicho {
+    background-image: url(/img/tipoBicho.png);
+    background-size: cover;
+    background-position: center;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    background-blend-mode: overlay;
+    padding: 20px 40px;
+    border-radius: 50px;
+    position: relative;
+    display: inline-block;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+.tipo-dragon {
+    background-image: url(/img/tipoDragon.png);
+    background-size: cover;
+    background-position: center;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    background-blend-mode: overlay;
+    padding: 20px 40px;
+    border-radius: 50px;
+    position: relative;
+    display: inline-block;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+.tipo-electrico {
+    background-image: url(/img/tipoElectrico.png);
+    background-size: cover;
+    background-position: center;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    background-blend-mode: overlay;
+    padding: 20px 40px;
+    border-radius: 50px;
+    position: relative;
+    display: inline-block;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+.tipo-fantasma {
+    background-image: url(/img/tipoFantasma.png);
+    background-size: cover;
+    background-position: center;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    background-blend-mode: overlay;
+    padding: 20px 40px;
+    border-radius: 50px;
+    position: relative;
+    display: inline-block;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+.tipo-fuego {
+    background-image: url(/img/tipoFuego.png);
+    background-size: cover;
+    background-position: center;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    background-blend-mode: overlay;
+    padding: 20px 40px;
+    border-radius: 50px;
+    position: relative;
+    display: inline-block;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+.tipo-hada {
+    background-image: url(/img/tipoHada.png);
+    background-size: cover;
+    background-position: center;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    background-blend-mode: overlay;
+    padding: 20px 40px;
+    border-radius: 50px;
+    position: relative;
+    display: inline-block;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+.tipo-hielo {
+    background-image: url(/img/tipoHielo.png);
+    background-size: cover;
+    background-position: center;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    background-blend-mode: overlay;
+    padding: 20px 40px;
+    border-radius: 50px;
+    position: relative;
+    display: inline-block;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+.tipo-lucha {
+    background-image: url(/img/tipoLucha.png);
+    background-size: cover;
+    background-position: center;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    background-blend-mode: overlay;
+    padding: 20px 40px;
+    border-radius: 50px;
+    position: relative;
+    display: inline-block;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+.tipo-normal {
+    background-image: url(/img/tipoNormal.png);
+    background-size: cover;
+    background-position: center;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    background-blend-mode: overlay;
+    padding: 20px 40px;
+    border-radius: 50px;
+    position: relative;
+    display: inline-block;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+.tipo-planta {
+    background-image: url(/img/tipoPlanta.png);
+    background-size: cover;
+    background-position: center;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    background-blend-mode: overlay;
+    padding: 20px 40px;
+    border-radius: 50px;
+    position: relative;
+    display: inline-block;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+.tipo-psiquico {
+    background-image: url(/img/tipoPsiquico.png);
+    background-size: cover;
+    background-position: center;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    background-blend-mode: overlay;
+    padding: 20px 40px;
+    border-radius: 50px;
+    position: relative;
+    display: inline-block;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+.tipo-roca {
+    background-image: url(/img/tipoRoca.png);
+    background-size: cover;
+    background-position: center;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    background-blend-mode: overlay;
+    padding: 20px 40px;
+    border-radius: 50px;
+    position: relative;
+    display: inline-block;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+.tipo-siniestro {
+    background-image: url(/img/tipoSiniestro.png);
+    background-size: cover;
+    background-position: center;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    background-blend-mode: overlay;
+    padding: 20px 40px;
+    border-radius: 50px;
+    position: relative;
+    display: inline-block;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+.tipo-tierra {
+    background-image: url(/img/tipoTierra.png);
+    background-size: cover;
+    background-position: center;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    background-blend-mode: overlay;
+    padding: 20px 40px;
+    border-radius: 50px;
+    position: relative;
+    display: inline-block;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+.tipo-veneno {
+    background-image: url(/img/tipoVeneno.png);
+    background-size: cover;
+    background-position: center;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    background-blend-mode: overlay;
+    padding: 20px 40px;
+    border-radius: 50px;
+    position: relative;
+    display: inline-block;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+.tipo-volador {
+    background-image: url(/img/tipoVolador.png);
     background-size: cover;
     background-position: center;
     color: white;
