--- a/templates/ladingPrincipal.html
+++ b/templates/ladingPrincipal.html
@@ -13,29 +13,33 @@
             <div class="container-header">
                 <button class="btn"><i class="arrow"></i>TIPOS</button>
                 <div class="dropDown">
-                    <a href="">ACERO</a>
-                    <a href="">AGUA</a>
-                    <a href="">BICHO</a>
-                    <a href="">DRAGON</a>
-                    <a href="">ELECTRICO</a>
-                    <a href="">FANTASMA</a>
-                    <a href=""></a>
-                    <a href=""></a>
-                    <a href=""></a>
-                    <a href=""></a>
-                    <a href=""></a>
+                    <a href="/templates/TIPOS DE POKEMON/acero.html">ACERO</a>
+                    <a href="/templates/TIPOS DE POKEMON/agua.html">AGUA</a>
+                    <a href="/templates/TIPOS DE POKEMON/bicho.html">BICHO</a>
+                    <a href="/templates/TIPOS DE POKEMON/dragon.html">DRAGON</a>
+                    <a href="/templates/TIPOS DE POKEMON/electrico.html">ELECTRICO</a>
+                    <a href="/templates/TIPOS DE POKEMON/fantasma.html">FANTASMA</a>
+                    <a href="/templates/TIPOS DE POKEMON/fuego.html">FUEGO</a>
+                    <a href="/templates/TIPOS DE POKEMON/hada.html">HADA</a>
+                    <a href="/templates/TIPOS DE POKEMON/hielo.html">HIELO</a>
+                    <a href="/templates/TIPOS DE POKEMON/lucha.html">LUCHA</a>
+                    <a href="/templates/TIPOS DE POKEMON/normal.html">NORMAL</a>
+                    <a href="/templates/TIPOS DE POKEMON/planta.html">PLANTA</a>
+                    <a href="/templates/TIPOS DE POKEMON/psiquico.html">PSIQUICO</a>
                     <a href="/templates/TIPOS DE POKEMON/roca.html">ROCA</a>
-                    <a href=""></a>
-                    <a href=""></a>
-                    <a href=""></a>
-                    <a href=""></a>
+                    <a href="/templates/TIPOS DE POKEMON/siniestro.html">SINIESTRO</a>
+                    <a href="/templates/TIPOS DE POKEMON/tierra.html">TIERRA</a>
+                    <a href="/templates/TIPOS DE POKEMON/veneno.html">VENENO</a>
+                    <a href="/templates/TIPOS DE POKEMON/volador.html">VOLADOR</a>
                 </div>
             </div>
         </div>
 
-        <!-- <div class="header-center">
-            <img src="" alt="" class="logo">
-        </div> -->
+        <div class="header-center">
+            <a href="/templates/ladingPrincipal.html">
+                <img src="" alt="logo">
+            </a>
+        </div>
 
         <div class="header-right">
             <a href="https://wa.me/573011907952">
@@ -47,8 +51,8 @@
     <div class="header-spacer"></div>
 
 
-        <div class="nube-main">
-            <h1>¿Que son los pokemones?</h1>
+        <div>
+            <h1 class="nube-main">¿Que son los pokemones?</h1>
         </div>
 
         <div class="main-spacer"></div>
@@ -74,79 +78,95 @@
         <br>
         A continuación, se presenta el concepto completo de cada uno de los 18 tipos de Pokémon:</p>
         <ol>
-            <li class="nube-li">
-                <b>Tipo Acero</b>: Se asocia a la dureza, la defensa y los metales. Los Pokémon de este tipo suelen tener una gran resistencia física.
+            <li class="tipo-acero">
+                <a href="/templates/TIPOS DE POKEMON/acero.html" class="link">Tipo Acero</a>: Se asocia a la dureza, la defensa y los metales. Los Pokémon de este tipo suelen tener una gran resistencia física.
             </li>
             <br>
-            <li class="nube-li">
-                <b>Tipo Agua</b>: Representa el agua en todas sus formas: ríos, mares, lluvia, etc. Es el tipo más común y versátil.
+            <br>
+            <li class="tipo-agua">
+                <a href="/templates/TIPOS DE POKEMON/agua.html" class="link">Tipo Agua</a>: Representa el agua en todas sus formas: ríos, mares, lluvia, etc. Es el tipo más común y versátil.
             </li>
             <br>
-            <li class="nube-li">
-                <b>Tipo Bicho</b>: Inspirado en insectos y arácnidos. A menudo son rápidos y pueden aprender movimientos para infligir estados alterados.
+            <br>
+            <li class="tipo-bicho">
+                <a href="/templates/TIPOS DE POKEMON/bicho.html" class="link">Tipo Bicho</a>: Inspirado en insectos y arácnidos. A menudo son rápidos y pueden aprender movimientos para infligir estados alterados.
             </li>
             <br>
-            <li class="nube-li">
-                <b>Tipo Dragon</b>: Representa criaturas poderosas y míticas, a menudo con una gran fuerza y estadísticas equilibradas.
+            <br>
+            <li class="tipo-dragon">
+                <a href="/templates/TIPOS DE POKEMON/dragon.html" class="link">Tipo Dragon</a>: Representa criaturas poderosas y míticas, a menudo con una gran fuerza y estadísticas equilibradas.
             </li>
             <br>
-            <li class="nube-li">
-                <b>Tipo Electrico</b>: Se asocia a la electricidad y la velocidad. Los Pokémon de este tipo son conocidos por su rapidez y ataques especiales.
+            <br>
+            <li class="tipo-electrico">
+                <a href="/templates/TIPOS DE POKEMON/electrico.html" class="link">Tipo Electrico</a>: Se asocia a la electricidad y la velocidad. Los Pokémon de este tipo son conocidos por su rapidez y ataques especiales.
             </li>
             <br>
-            <li class="nube-li">
-                <b>Tipo Fantasma</b>: Relacionado con lo paranormal, espectros y seres del más allá. Pueden atravesar objetos y son inmunes a ciertos ataques.
+            <br>
+            <li class="tipo-fantasma">
+                <a href="/templates/TIPOS DE POKEMON/fantasma.html" class="link">Tipo Fantasma</a>: Relacionado con lo paranormal, espectros y seres del más allá. Pueden atravesar objetos y son inmunes a ciertos ataques.
             </li>
             <br>
-            <li class="nube-li">
-                <b>Tipo Fuego</b>: Simboliza el fuego, el calor y la explosividad. Los Pokémon de este tipo a menudo tienen ataques especiales poderosos.
+            <br>
+            <li class="tipo-fuego">
+                <a href="/templates/TIPOS DE POKEMON/fuego.html" class="link">Tipo Fuego</a>: Simboliza el fuego, el calor y la explosividad. Los Pokémon de este tipo a menudo tienen ataques especiales poderosos.
             </li>
             <br>
-            <li class="nube-li">
-                <b>Tipo Hada</b>: Un tipo introducido en la sexta generación. Se basa en criaturas de cuentos de hadas y mitología, a menudo con un aspecto dulce o mágico.
+            <br>
+            <li class="tipo-hada">
+                <a href="/templates/TIPOS DE POKEMON/hada.html" class="link">Tipo Hada</a>: Un tipo introducido en la sexta generación. Se basa en criaturas de cuentos de hadas y mitología, a menudo con un aspecto dulce o mágico.
             </li>
             <br>
-            <li class="nube-li">
-                <b>Tipo Hielo</b>: Representa el frío, la nieve y el hielo. Sus ataques pueden congelar a los oponentes.
+            <br>
+            <li class="tipo-hielo">
+                <a href="/templates/TIPOS DE POKEMON/hielo.html" class="link">Tipo Hielo</a>: Representa el frío, la nieve y el hielo. Sus ataques pueden congelar a los oponentes.
             </li>
             <br>
-            <li class="nube-li">
-                <a>Tipo Lucha</d>: Basado en las artes marciales y el combate cuerpo a cuerpo. Los Pokémon de este tipo son expertos en ataques físicos.
+            <br>
+            <li class="tipo-lucha">
+                <a href="/templates/TIPOS DE POKEMON/lucha.html" class="link">Tipo Lucha</a>: Basado en las artes marciales y el combate cuerpo a cuerpo. Los Pokémon de este tipo son expertos en ataques físicos.
             </li>
             <br>
-            <li class="nube-li">
-                <a>Tipo Normal</a>: Representa lo común y habitual. Los Pokémon de este tipo suelen ser de los primeros en encontrarse y tienen una amplia variedad de movimientos.
+            <br>
+            <li class="tipo-normal">
+                <a href="/templates/TIPOS DE POKEMON/normal.html" class="link">Tipo Normal</a>: Representa lo común y habitual. Los Pokémon de este tipo suelen ser de los primeros en encontrarse y tienen una amplia variedad de movimientos.
             </li>
             <br>
-            <li class="nube-li">
-                <a href="">Tipo Planta</a>: Se asocia a la naturaleza, las plantas y los bosques. Pueden aprender movimientos de recuperación y ataques que causan estados alterados.
+            <br>
+            <li class="tipo-planta">
+                <a href="/templates/TIPOS DE POKEMON/planta.html" class="link">Tipo Planta</a>: Se asocia a la naturaleza, las plantas y los bosques. Pueden aprender movimientos de recuperación y ataques que causan estados alterados.
             </li>
             <br>
-            <li class="nube-li">
-                <a>Tipo Psiquico</a>: Relacionado con el poder mental y la telequinesis. Sus ataques especiales son a menudo muy fuertes.
+            <br>
+            <li class="tipo-psiquico">
+                <a href="/templates/TIPOS DE POKEMON/psiquico.html" class="link">Tipo Psiquico</a>: Relacionado con el poder mental y la telequinesis. Sus ataques especiales son a menudo muy fuertes.
             </li>
             <br>
-            <li class="nube-li">
-                <a href="/templates/TIPOS DE POKEMON/roca.html">Tipo Roca</a>: Simboliza las rocas, la piedra y la geología. Son conocidos por su alta defensa física.
+            <br>
+            <li class="tipo-roca">
+                <a href="/templates/TIPOS DE POKEMON/roca.html" class="link">Tipo Roca</a>: Simboliza las rocas, la piedra y la geología. Son conocidos por su alta defensa física.
             </li>
             <br>
-            <li class="nube-li">
-                <a href="">Tipo Siniestro</a>: Introduce un elemento de maldad y oscuridad, a menudo con ataques que explotan las debilidades del oponente.
+            <br>
+            <li class="tipo-siniestro">
+                <a href="/templates/TIPOS DE POKEMON/siniestro.html" class="link">Tipo Siniestro</a>: Introduce un elemento de maldad y oscuridad, a menudo con ataques que explotan las debilidades del oponente.
             </li>
             <br>
-            <li class="nube-li">
-                <a href="">Tipo Tierra</a>: Asociado a la tierra, el suelo y los terremotos. Tienen ataques físicos muy potentes.
+            <br>
+            <li class="tipo-tierra">
+                <a href="/templates/TIPOS DE POKEMON/tierra.html" class="link">Tipo Tierra</a>: Asociado a la tierra, el suelo y los terremotos. Tienen ataques físicos muy potentes.
             </li>
             <br>
-            <li class="nube-li">
-                <a href="">Tipo Veneno</a>: Representa el veneno, toxinas y sustancias peligrosas. Sus ataques pueden envenenar y debilitar al oponente con el tiempo.
+            <br>
+            <li class="tipo-veneno">
+                <a href="/templates/TIPOS DE POKEMON/veneno.html" class="link">Tipo Veneno</a>: Representa el veneno, toxinas y sustancias peligrosas. Sus ataques pueden envenenar y debilitar al oponente con el tiempo.
             </li>
             <br>
-            <li class="nube-li">
-                <a href="">Tipo Volador</a>: Se asocia al aire, el viento y las criaturas voladoras. Suelen ser muy rápidos.
+            <br>
+            <li class="tipo-volador">
+                <a href="/templates/TIPOS DE POKEMON/volador.html" class="link">Tipo Volador</a>: Se asocia al aire, el viento y las criaturas voladoras. Suelen ser muy rápidos.
             </li>
         </ol>
-            
     </main>
 </body>
 <script src="/static/app.js"></script>
