--- a/templates/TIPOS DE POKEMON/roca.html
+++ b/templates/TIPOS DE POKEMON/roca.html
@@ -13,29 +13,33 @@
             <div class="container-header">
                 <button class="btn"><i class="arrow"></i>TIPOS</button>
                 <div class="dropDown">
-                    <a href="">ACERO</a>
-                    <a href="">AGUA</a>
-                    <a href="">BICHO</a>
-                    <a href="">DRAGON</a>
-                    <a href="">ELECTRICO</a>
-                    <a href="">FANTASMA</a>
-                    <a href=""></a>
-                    <a href=""></a>
-                    <a href=""></a>
-                    <a href=""></a>
-                    <a href=""></a>
+                    <a href="/templates/TIPOS DE POKEMON/acero.html">ACERO</a>
+                    <a href="/templates/TIPOS DE POKEMON/agua.html">AGUA</a>
+                    <a href="/templates/TIPOS DE POKEMON/bicho.html">BICHO</a>
+                    <a href="/templates/TIPOS DE POKEMON/dragon.html">DRAGON</a>
+                    <a href="/templates/TIPOS DE POKEMON/electrico.html">ELECTRICO</a>
+                    <a href="/templates/TIPOS DE POKEMON/fantasma.html">FANTASMA</a>
+                    <a href="/templates/TIPOS DE POKEMON/fuego.html">FUEGO</a>
+                    <a href="/templates/TIPOS DE POKEMON/hada.html">HADA</a>
+                    <a href="/templates/TIPOS DE POKEMON/hielo.html">HIELO</a>
+                    <a href="/templates/TIPOS DE POKEMON/lucha.html">LUCHA</a>
+                    <a href="/templates/TIPOS DE POKEMON/normal.html">NORMAL</a>
+                    <a href="/templates/TIPOS DE POKEMON/planta.html">PLANTA</a>
+                    <a href="/templates/TIPOS DE POKEMON/psiquico.html">PSIQUICO</a>
                     <a href="/templates/TIPOS DE POKEMON/roca.html">ROCA</a>
-                    <a href=""></a>
-                    <a href=""></a>
-                    <a href=""></a>
-                    <a href=""></a>
+                    <a href="/templates/TIPOS DE POKEMON/siniestro.html">SINIESTRO</a>
+                    <a href="/templates/TIPOS DE POKEMON/tierra.html">TIERRA</a>
+                    <a href="/templates/TIPOS DE POKEMON/veneno.html">VENENO</a>
+                    <a href="/templates/TIPOS DE POKEMON/volador.html">VOLADOR</a>
                 </div>
             </div>
         </div>
 
-        <!-- <div class="header-center">
-            <img src="" alt="" class="logo">
-        </div> -->
+        <div class="header-center">
+            <a href="/templates/ladingPrincipal.html">
+                <img src="" alt="logo">
+            </a>
+        </div>
 
         <div class="header-right">
             <a href="https://wa.me/573011907952">
@@ -43,10 +47,11 @@
             </a>
         </div>
     </header>
+
+    <div class="header-spacer"></div>
     
     <div class="category-container" id="tipo-roca">
         <h2>Tipo Roca 🪨</h2>
-        <a href="/templates/ladingPrincipal.html"><button>Volver</button></a>
         <div id="rock-type-container" class="pokemon-list"></div>
     </div>
 </body>
