--- a/templates/ladingPrincipal.html
+++ b/templates/ladingPrincipal.html
@@ -37,7 +37,7 @@
 
         <div class="header-center">
             <a href="/templates/ladingPrincipal.html">
-                <img src="" alt="logo">
+                <img src="/img/pokedex-removebg-preview.png" alt="logo" class="logo">
             </a>
         </div>
 
@@ -51,8 +51,8 @@
     <div class="header-spacer"></div>
 
 
-        <div>
-            <h1 class="nube-main">¿Que son los pokemones?</h1>
+        <div class="contenedor-c">
+            <h1 class="nube-h1">¿Que son los pokemones?</h1>
         </div>
 
         <div class="main-spacer"></div>
@@ -63,13 +63,10 @@
 
         <div class="main-spacer"></div>
 
-        <div class="nube-main">
-            <h1>Mundo Pokemon</h1>
+        <div class="contenedor-c">
+            <h1 class="nube-h1">Tipos de Pokemon</h1> 
         </div>
 
-        <div class="main-spacer"></div>
-
-        <h1 div class="nube-main">Tipos de Pokemon</h1> 
         <p class="nube-p">Los Pokémon son criaturas ficticias, inspiradas en animales reales, insectos, plantas, objetos o seres mitológicos. Viven en un mundo junto a los humanos y poseen habilidades especiales que se manifiestan a través de diferentes "tipos". El concepto central de la franquicia es que los humanos, conocidos como entrenadores, los capturan, entrenan y combaten con ellos para fortalecer sus lazos y poner a prueba su fuerza y sabiduría.
         <br>
         <br>
@@ -168,6 +165,12 @@
             </li>
         </ol>
     </main>
+
+    <div class="main-spacer"></div>
+
+    <footer class="contenedor-c">
+        <h1 class="nube-h1">¡Vuelve Pronto!</h1>
+    </footer>
 </body>
 <script src="/static/app.js"></script>
 </html>
