renamed:    templates/antiguo.html -> antiguo/antiguo.html 	modified:   templates/TIPOS DE POKEMON/acero.html 	modified:   templates/TIPOS DE POKEMON/agua.html 	modified:   templates/TIPOS DE POKEMON/bicho.html 	modified:   templates/TIPOS DE POKEMON/dragon.html 	modified:   templates/TIPOS DE POKEMON/electrico.html 	modified:   templates/TIPOS DE POKEMON/fantasma.html 	modified:   templates/TIPOS DE POKEMON/fuego.html 	modified:   templates/TIPOS DE POKEMON/hada.html 	modified:   templates/TIPOS DE POKEMON/hielo.html 	modified:   templates/TIPOS DE POKEMON/lucha.html 	modified:   templates/TIPOS DE POKEMON/normal.html 	modified:   templates/TIPOS DE POKEMON/planta.html 	modified:   templates/TIPOS DE POKEMON/psiquico.html 	modified:   templates/TIPOS DE POKEMON/roca.html 	modified:   templates/TIPOS DE POKEMON/siniestro.html 	modified:   templates/TIPOS DE POKEMON/tierra.html 	modified:   templates/TIPOS DE POKEMON/veneno.html 	modified:   templates/TIPOS DE POKEMON/volador.html

--- a/templates/TIPOS DE POKEMON/agua.html
+++ b/templates/TIPOS DE POKEMON/agua.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Roca</title>
+    <title>Agua</title>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link type="img/logo" rel="shortcut icon" href="/img/logoN.png" sizes="180x180" data-react-helmet="true">
     <link rel="stylesheet" href="/static/ladingPrincipal.css">
 </head>
 <body>
@@ -37,7 +38,7 @@
 
         <div class="header-center">
             <a href="/templates/ladingPrincipal.html">
-                <img src="" alt="logo">
+                <img src="/img/pokedex-removebg-preview.png" alt="logo" class="logo">
             </a>
         </div>
 
